@@ -1,5 +1,11 @@
 2008-07-30  Jonathan Tai  <jon@tgpsolutions.com>
 
+	* strongwind/accessibles.py: In TreeTable's select() and activate()
+	  methods, and in MenuBar's select() and open() methods, check the path
+	  argument and throw a TypeError if the path is not a list. (#545553)
+
+2008-07-30  Jonathan Tai  <jon@tgpsolutions.com>
+
 	* strongwind/accessibles.py: Bind actions on-the-fly.  Remove click(),
 	  toggle(), and activate() - they will be generated and returned
 	  on-the-fly from now on.  Deprecate _doAction(), since it should not
